tests/e2e/service_event_expected.story
gmaps geocode address: "foo" as g
    foo = 1
